# ferryman

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  bridge-release.toml  compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  contributor.yml
config/: bridge.example.toml
crates/ferryman-cli/: Cargo.toml
crates/ferryman-cli/src/: main.rs
crates/ferryman-core/: Cargo.toml
crates/ferryman-core/src/: lib.rs
crates/ferryman-server/: Cargo.toml
crates/ferryman-server/src/: continuity.rs  lib.rs  main.rs  recovery_targets.rs  workspace.rs
crates/ferryman-worker-sdk/: Cargo.toml
crates/ferryman-worker-sdk/examples/: agent_worker.rs  mock_worker.rs
crates/ferryman-worker-sdk/src/: lib.rs
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: main.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: lib.rs
crates/orchestrator-server/: Cargo.toml
crates/orchestrator-server/src/: continuity.rs  lib.rs  main.rs  recovery_targets.rs  telegram.rs  workspace.rs
crates/orchestrator-worker-sdk/: Cargo.toml
crates/orchestrator-worker-sdk/examples/: agent_worker.rs  dryrun_worker.rs  hone_agent_worker.rs  mock_worker.rs
crates/orchestrator-worker-sdk/src/: lib.rs
docs/: AGENT_MODEL.md  AI_SAFETY_REVIEW.md  ARCHITECTURE.md  BACKUP_AND_RECOVERY.md  CONTINUITY_AND_IMPROVEMENT.md  DEPLOYMENT.md  NESTED_BRIDGE.md  OPERATING_MODEL.md  PROJECT_MEMORY.md  PUBLIC_RELEASE_PLAN.md  RELEASE_PROCESS.md  THREAT_MODEL.md  TWO_MACHINE_RECOVERY.md  UPDATES.md  UPGRADING.md
docs/adr/: 0001-rust-runtime.md  0002-durable-state-machine.md  0003-storage-port.md  0004-http-worker-protocol.md  0005-plugin-stability.md  0006-private-local-repositories-and-agents.md  0007-bridge-owned-project-memory.md
docs/reviews/: 2026-07-23-independent-review.md
examples/report-project/: README.md
openapi/: openapi.yaml
scripts/: apply-update.sh  attach-bridge.sh  hub-up.sh  nest-bridge.ps1  nest-bridge.sh  pair-recovery-key.ps1  start-local.ps1  update-check.sh  wsl-bridge.sh
wiki/: Getting-Started.md  Home.md  Writing-a-Worker.md
