[workspace]
members = [
  "crates/ferryman-core",
  "crates/ferryman-server",
  "crates/ferryman-cli",
  "crates/ferryman-worker-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/estejosh/ferryman"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
chacha20poly1305 = "0.10"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
keyring = { version = "3.6", features = ["windows-native", "apple-native", "sync-secret-service"] }
pbkdf2 = "0.12"
rpassword = "7.4"
http-body-util = "0.1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
