[package]
name = "ferryman-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "ferry"

[[bin]]
name = "ferry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
chacha20poly1305.workspace = true
futures-util.workspace = true
hex.workspace = true
keyring.workspace = true
pbkdf2.workspace = true
rand.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
