[package]
name = "ferryman-worker-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ferryman-core = { path = "../ferryman-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "mock_worker"
path = "examples/mock_worker.rs"

[[example]]
name = "agent_worker"
path = "examples/agent_worker.rs"
