[package]
name = "orchestrator-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
keyring.workspace = true
reqwest.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
