[package]
name = "orchestrator-worker-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "mock_worker"
path = "examples/mock_worker.rs"
